drawer css & fyp technical paper pdf

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,9 @@
 
 .global-font {
     /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif */
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-weight: 400;
+    font-size: large;
 }
 
 .link-underline {
